
Implemented pm.add_ads_request() function to add requested PDF into
the database.
Documented and tested.

*****

Implemented bm.find() function to get an specific entry.
Documented and tested.

*****

Cleaned up a couple tests in tests_bib_manager.py.

*****

Tweaked pm.open() and pm.add_ads_request() functions with bm.find()
Enabled bibcode argument for pm.open().
Updated tests and docstring.

*****

Implemented pm.fetch() function.
This is the high-level function to fetch PDF files from ADS.
Tested and documented.
Updated conftest.py with mock requests.

*****

Implemented cli_fetch() function.
Added fetch_keyword variable to utils.py
Tested.
Need to implement docs for PDF manager module.

*****

Fixed typo querry -> query.
Added to FAQs: UnicodeEncodeError when running over ssh.


*****  Thu Jan  2 19:04:31 CLT 2020  *****

Updated Copyright year to 2020.

*****

Implemented bm.prompt_search() function for interactive prompt
searches in the Bibmanager database by keywords, including
auto-complete, auto-suggest, and bottom toolbar helps.
Documented and tested.
(Pulled code from cli_fetch() to generalize it).
Documented and tested.

*****

Some minor PEP8 cosmetics.

*****

Fixed hard-coded variable in u.KeyWordCompleter() class.
Removed u.fetch_keywords constant (no longer used).

*****

Modified pm.open() function, added pdf argument.
Added check that PDF file exists (raising ValueError if not).
Added check that at least one argument must be not None (ValueError).
Updated docstrings and tests.

*****

Implemented cli_open() function for open CLI.
Some tweaks in cli_fetch() function (no behavior change).
Documented and tested.


*****  Mon Jan  6 11:01:02 CET 2020  *****

Fixed bug in test_latex_manager.py, needed a teardown to return to
current folder after a change of directory that was deleted in test.

*****

Implemented pm.set_pdf() function, a more general function than
pm.add_ads_request().
Removed pm.add_ads_request() function.
Tested and documented.

